--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Ubuntu:400,700);
+@import url(http://fonts.googleapis.com/css?family=Ubuntu:400,700&subset=latin,latin-ext);
 body {
   font-family: 'Ubuntu', sans-serif;
   font-size: 14px;
